Fix z-index header

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,7 +12,7 @@
 
 .menu{
     position: fixed;
-    padding-top: 150px;
+    padding-top: 200px;
     font-size: 25px;
     color: #000;
     z-index:9999;
