--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -42,7 +42,7 @@
 #page-content-wrapper {
     width: 100%;
     position: absolute;
-    padding: 15px;
+    padding: 15px 15px 15px 30px;
 }
 
 #wrapper.toggled #page-content-wrapper {
